fix mapping of output and styles

--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "th-theme": "thelmanews/th-theme",
     "polymer": "Polymer/polymer#~0.5.1",
     "moment": "~2.8.3",
-    "core-dropdown-menu": "polymer/core-dropdown-menu#~0.5.5"
+    "core-item": "Polymer/core-item#~0.5.1",
+    "core-selector": "Polymer/core-selector#0.5.1"
+    
   }
 }
